[gd_scene load_steps=32 format=3]

[ext_resource type="Script" path="res://Script/Skill/SkillKeySet.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c2vfl4clw7pa5" path="res://Art/set_menu/653.png" id="2"]
[ext_resource type="FontFile" uid="uid://2rjpff4w8bmb" path="res://Font/华康海报体W12 &amp; 华康海报体W12(P).ttc" id="3"]
[ext_resource type="FontFile" uid="uid://bicgw4numqquw" path="res://Font/HYZhuZiMeiXinTiW.ttf" id="4"]
[ext_resource type="Texture2D" uid="uid://dnruq566a8bo1" path="res://Art/MagicWeapon/220.png" id="5"]
[ext_resource type="Texture2D" uid="uid://eqob07i5mlve" path="res://Art/MagicWeapon/222.png" id="6"]

[sub_resource type="StyleBoxEmpty" id="1"]
script = null

[sub_resource type="StyleBoxEmpty" id="2"]
script = null

[sub_resource type="StyleBoxEmpty" id="3"]
script = null

[sub_resource type="StyleBoxEmpty" id="4"]
script = null

[sub_resource type="StyleBoxEmpty" id="5"]
script = null

[sub_resource type="StyleBoxEmpty" id="6"]
script = null

[sub_resource type="StyleBoxEmpty" id="7"]
script = null

[sub_resource type="StyleBoxEmpty" id="8"]
script = null

[sub_resource type="StyleBoxEmpty" id="9"]
script = null

[sub_resource type="StyleBoxEmpty" id="10"]
script = null

[sub_resource type="StyleBoxEmpty" id="11"]
script = null

[sub_resource type="StyleBoxEmpty" id="12"]
script = null

[sub_resource type="StyleBoxEmpty" id="13"]
script = null

[sub_resource type="StyleBoxEmpty" id="14"]
script = null

[sub_resource type="StyleBoxEmpty" id="15"]
script = null

[sub_resource type="StyleBoxEmpty" id="16"]
script = null

[sub_resource type="StyleBoxEmpty" id="17"]
script = null

[sub_resource type="StyleBoxEmpty" id="18"]
script = null

[sub_resource type="StyleBoxEmpty" id="19"]
script = null

[sub_resource type="StyleBoxEmpty" id="20"]
script = null

[sub_resource type="StyleBoxEmpty" id="21"]
script = null

[sub_resource type="StyleBoxEmpty" id="22"]
script = null

[sub_resource type="StyleBoxEmpty" id="23"]
script = null

[sub_resource type="StyleBoxEmpty" id="24"]
script = null

[sub_resource type="StyleBoxEmpty" id="25"]
script = null

[node name="SkillKeySet" type="Node2D"]
script = ExtResource( "1" )

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -933.0
offset_top = -685.0
offset_right = 942.0
offset_bottom = 691.0
color = Color(0, 0, 0, 0.313726)
metadata/_edit_lock_ = true

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(38, 75)
texture = ExtResource( "2" )
metadata/_edit_lock_ = true

[node name="Y" type="Button" parent="BG"]
offset_left = -86.0
offset_top = -95.0
offset_right = 65.0
offset_bottom = -69.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "1" )
theme_override_styles/hover = SubResource( "2" )
theme_override_styles/pressed = SubResource( "3" )
theme_override_styles/disabled = SubResource( "4" )
theme_override_styles/focus = SubResource( "5" )
text = "设置为按键 Y"

[node name="U" type="Button" parent="BG"]
offset_left = -87.0
offset_top = -51.0
offset_right = 64.0
offset_bottom = -25.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "6" )
theme_override_styles/hover = SubResource( "7" )
theme_override_styles/pressed = SubResource( "8" )
theme_override_styles/disabled = SubResource( "9" )
theme_override_styles/focus = SubResource( "10" )
text = "设置为按键 U"

[node name="I" type="Button" parent="BG"]
offset_left = -87.0
offset_top = -6.0
offset_right = 64.0
offset_bottom = 20.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "11" )
theme_override_styles/hover = SubResource( "12" )
theme_override_styles/pressed = SubResource( "13" )
theme_override_styles/disabled = SubResource( "14" )
theme_override_styles/focus = SubResource( "15" )
text = "设置为按键 I"

[node name="O" type="Button" parent="BG"]
offset_left = -87.0
offset_top = 38.0
offset_right = 64.0
offset_bottom = 64.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "16" )
theme_override_styles/hover = SubResource( "17" )
theme_override_styles/pressed = SubResource( "18" )
theme_override_styles/disabled = SubResource( "19" )
theme_override_styles/focus = SubResource( "20" )
text = "设置为按键 O"

[node name="L" type="Button" parent="BG"]
offset_left = -87.0
offset_top = 82.0
offset_right = 64.0
offset_bottom = 108.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "21" )
theme_override_styles/hover = SubResource( "22" )
theme_override_styles/pressed = SubResource( "23" )
theme_override_styles/disabled = SubResource( "24" )
theme_override_styles/focus = SubResource( "25" )
text = "设置为按键 L"

[node name="Label" type="Label" parent="BG"]
offset_left = -114.0
offset_top = -124.0
offset_right = 99.0
offset_bottom = -98.0
theme_override_colors/font_color = Color(0.964706, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource( "4" )
theme_override_font_sizes/font_size = 18
text = "设置技能 “升龙斩” 按键"

[node name="Close" type="TextureButton" parent="."]
offset_left = 148.0
offset_top = -82.0
offset_right = 189.0
offset_bottom = -41.0
texture_normal = ExtResource( "5" )
texture_pressed = ExtResource( "5" )
texture_hover = ExtResource( "6" )
texture_disabled = ExtResource( "5" )
metadata/_edit_lock_ = true

[connection signal="pressed" from="BG/Y" to="." method="_on_y_pressed" flags=18]
[connection signal="pressed" from="BG/U" to="." method="_on_u_pressed" flags=18]
[connection signal="pressed" from="BG/I" to="." method="_on_i_pressed" flags=18]
[connection signal="pressed" from="BG/O" to="." method="_on_o_pressed" flags=18]
[connection signal="pressed" from="BG/L" to="." method="_on_l_pressed" flags=18]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed" flags=18]
